# PoolAllocator

./: README.md
include/: poolallocator.h
tests/: CMakeLists.txt  tests.cpp
